Fix styling issue on mobile resume page

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -1012,6 +1012,11 @@ input[type="submit"]:focus {
   }
 }
 
+@media only screen and (max-width: 575px) {
+  .skills {
+    margin-top: 3rem;
+  }
+}
 
 
 /* ------------------------------------------------------------ 
